--- a/.github/workflows/01-building-blocks.yaml
+++ b/.github/workflows/01-building-blocks.yaml
@@ -4,14 +4,18 @@ jobs:
     echo-hello:
         runs-on: ubuntu-latest
         steps: 
-            - name: Say hello
-              run: echo "Hello, World!"
+            - name: Say Hello
+              run: echo "Hello, Worlds!"
     echo-goodbye:
         runs-on: ubuntu-latest
         steps:
-            - name: Failed step
+            - name: Failed Step
               run: |
-                  echo "I will fail"
-                  exit 1
-            - name: Say GoodBye
-              run: echo "Goodbye!!"
+                echo "I will fail"
+                exit 1
+            - name: Say Good Bye
+              run: echo "Good Bye!!"
+            - name: Say Bye Again
+              run:
+                  echo "Get lost man!"
+        
