--- a/.github/workflows/01-building-blocks.yaml
+++ b/.github/workflows/01-building-blocks.yaml
@@ -11,7 +11,7 @@ jobs:
         steps:
             - name: Failed Step
               run: |
-                echo "I will fail"
+                echo "I will succeed"
                 # exit 1
             - name: Say Good Bye
               run: echo "Good Bye!!"
