--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -6,8 +6,12 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
-            - name: Printing Folders
-              run: ls 
+            - name: Setup Node
+              uses: actions/setup-node@v3
+              with:
+                node-version: '20.x'
+            - name: Install Dependency
+              run: npm ci
         # 0. Checkout the code from the repository
         # 1. Install the deps of the react application
         # 2. Execute the automated tests
