feat(04- updated the working Directory),feat(03- removed teh push trigger)

--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -12,6 +12,7 @@ jobs:
                 node-version: '20.x'
             - name: Install Dependency
               run: npm ci
+              working-directory: 04-using-actions/react-app
         # 0. Checkout the code from the repository
         # 1. Install the deps of the react application
         # 2. Execute the automated tests
