--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -4,7 +4,7 @@ on:
     workflow_dispatch: 
 jobs:
     echo-data:
-        runs-on: ubuntu-test
+        runs-on: ubuntu-latest
         steps: 
             - name: Display Information
               run: |
