feat(06-contexts): add workflow, Typo

--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -17,4 +17,4 @@ jobs:
                 echo "Run no: ${{ github.run_number }}"
             - name: Retrieve Variable
               run: |
-                echo "Variable value: ${{ vars.MYVAR }}"
+                echo "Variable value: ${{ vars.MY_VAR }}"
