--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -1,8 +1,12 @@
 name: 06 - Contexts
-run-name: My custom workflow run-name - ${{ runner.os }}
+run-name: My custom workflow run-name
 on: 
     push:
-    workflow_dispatch: 
+    workflow_dispatch:
+        inputs:
+            debug:
+                type: boolean
+                default: false
 jobs:
     echo-data:
         runs-on: ubuntu-latest
