--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -1,5 +1,5 @@
 name: 06 - Contexts
-run-name: My custom workflow run-name
+run-name: My custom workflow run-name IS SAI
 on: 
     push:
     workflow_dispatch:
@@ -22,4 +22,4 @@ jobs:
                 echo "Run no: ${{ github.run_number }}"
             - name: Retrieve Variable
               run: |
-                echo "Variable value: ${{ vars.MY_VAR }}"
+                echo "Variable value is: ${{ vars.MY_VAR }}"
