--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -6,7 +6,7 @@ on:
         inputs:
             debug:
                 type: boolean
-                default: false
+                default: true
 jobs:
     echo-data:
         runs-on: ubuntu-latest
