--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -7,9 +7,15 @@ on:
             debug:
                 type: boolean
                 default: false
+env:
+    MY_WORKFLOW_VAR: "workflow"
+    MY_OVERWRITTEN_VAR: 'workflow_overwritten'
 jobs:
     echo-data:
         runs-on: ubuntu-latest
+        env:
+          MY_JOB_VAR: 'job'
+          MY_OVERWRITTEN_VAR: 'job_overwritten'
         steps: 
             - name: Display Information
               run: |
@@ -23,3 +29,15 @@ jobs:
             - name: Retrieve Variable
               run: |
                 echo "Variable value is: ${{ vars.MY_VAR }}"
+            - name: Print Env Variables
+              env:
+                MY_OVERWRITTEN_VAR: 'step'
+              run: |
+                echo "Workflow env: ${{ env.MY_WORKFLOW_VAR }}"
+                echo "Workflow overwritten env: ${{ env.MY_OVERWRITTEN_VAR}}"
+            - name: Print Env Variables
+              env:
+                  MY_OVERWRITTEN_VAR: 'step'
+              run: |
+                  echo "Workflow env: ${{ env.MY_WORKFLOW_VAR }}"
+                  echo "Workflow overwritten env: ${{ env.MY_OVERWRITTEN_VAR}}"
