--- a/.github/workflows/07-expressions.yaml
+++ b/.github/workflows/07-expressions.yaml
@@ -19,7 +19,8 @@ jobs:
             echo "Runner OS: ${{ runner.os }}"
          - name: '[debug] Print when triggered from main'
            if: ${{ inputs.debug && github.ref == '/ref/heads/main' }}
-           run: echo "I was triggered from the main"
+           run: | 
+            echo "I was triggered from the main"
          - name: Greeting
            run: echo "Hello World!"
                
