typo with refs for main

--- a/.github/workflows/07-expressions.yaml
+++ b/.github/workflows/07-expressions.yaml
@@ -1,6 +1,6 @@
 name: 07 - Using expressions
 on: 
-    push:
+    # push:
     workflow_dispatch: 
         inputs:
             debug:
@@ -18,7 +18,7 @@ jobs:
             echo "Commit SHA: ${{ github.sha }}"
             echo "Runner OS: ${{ runner.os }}"
          - name: '[debug] Print when triggered from main'
-           if: ${{ inputs.debug && github.ref == '/ref/heads/main' }}
+           if: ${{ inputs.debug && github.ref == '/refs/heads/main' }}
            run: | 
             echo "I was triggered from the main"
          - name: Greeting
