--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -1,7 +1,7 @@
 name: 06 - Contexts
 run-name: My custom workflow and Input context is set to ${{ inputs.debug }}
 on: 
-    push:
+    # push:
     workflow_dispatch:
         inputs:
             debug:
