feat(07-expression): Updated the default value for input.

--- a/.github/workflows/07-expressions.yaml
+++ b/.github/workflows/07-expressions.yaml
@@ -1,6 +1,8 @@
 name: 07 - Using expressions
+run-name: 07 - Using expressions | DEBUG - ${{ inputs.debug && 'ON' || 'OFF' }}
+
 on: 
-    # push:
+    push:
     workflow_dispatch: 
         inputs:
             debug:
