feat(08-variables) retrieving variables and typo fixed for workflow_dispatch

--- a/.github/workflows/08-variable.yaml
+++ b/.github/workflows/08-variable.yaml
@@ -1,7 +1,7 @@
 name: Using Variables
 on:
     push:
-    worlflow_dispatch:
+    workflow_dispatch:
 env:
     WORKFLOW_VAR: 'I am a workflow env var'
     OVERWRITTEN: 'I will be overwrittten'
