feat(08-variables) typo fixed in echo

--- a/.github/workflows/08-variable.yaml
+++ b/.github/workflows/08-variable.yaml
@@ -22,4 +22,4 @@ jobs:
               env:
                 OVERWRITTEN: "I've been overwritten at step level"
               run: |
-                echo: "Step env var: ${{ env.OVERWRITTEN }}"
+                echo "Step env var: ${{ env.OVERWRITTEN }}"
