(09-Using functions): adding the sleep command

--- a/.github/workflows/09-Functions.yaml
+++ b/.github/workflows/09-Functions.yaml
@@ -17,6 +17,9 @@ jobs:
             - name: I will execute if not cancelled
               if: ${{ !cancelled() }}
               run: echo "I will always print, except the workflow is cancelled"
+            - name: Run the sleep command 
+              run: |
+                sleep 30
             - name: I wil be executed if cancelled
               if: ${{ cancelled() }}
               run: echo "I will be executed if the workflow is cancelled"
