--- a/.github/workflows/09-Functions.yaml
+++ b/.github/workflows/09-Functions.yaml
@@ -6,9 +6,16 @@ jobs:
     echo1:
         runs-on: ubuntu-latest
         steps:
-            - name: Run the sleep command 
+            - name: Print PR Title 
+              run: echo ${{ github.event.pull_request.title }}
+            - name: Print PR labels
               run: |
-                sleep 30
+                cat << EOF
+                ${{ toJSON(github.event.pull_request.labels) }}
+                EOF
+            - name: Bug Step
+              if: ${{ !cancelled() && contains(github.event.pull_request.title, 'fix' )}}
+              run: echo "I am a bug fix"
             - name: Failing step
               run: exit 1
             - name: I will be skipped
