--- a/.github/workflows/09-Functions.yaml
+++ b/.github/workflows/09-Functions.yaml
@@ -1,4 +1,4 @@
-name: 09 -  Using functions
+name: 09 Using Functions
 on:
     pull_request:
     workflow_dispatch:
@@ -6,28 +6,17 @@ jobs:
     echo1:
         runs-on: ubuntu-latest
         steps:
-            - name: Print PR Title 
-              run: echo ${{ github.event.pull_request.title }}
-            - name: Print PR labels
-              run: |
-                cat << EOF
-                ${{ toJSON(github.event.pull_request.labels) }}
-                EOF
-            - name: Bug Step
-              if: ${{ !cancelled() && contains(github.event.pull_request.title, 'fix' )}}
-              run: echo "I am a bug fix for Sure"
             - name: Failing step
               run: exit 1
             - name: I will be skipped
               if: ${{ success() }}
-              run: echo "I will print if previous steps succeed"
+              run: echo "I will print if previous step succeeds"
             - name: I will execute
               if: ${{ failure() }}
-              run: echo "I will print if any previous step fails"
-            - name: I will execute if not cancelled
+              run: echo " I will print if any previous step fails"
+            - name: I will execute
               if: ${{ !cancelled() }}
-              run: echo "I will always print, except the workflow is cancelled"
-            - name: I wil be executed if cancelled
+              run: echo "I will always print, except when the workflow is cancelled"
+            - name: I will execute when cancelled
               if: ${{ cancelled() }}
-              run: echo "I will be executed if the workflow is cancelled"
-
+              run: echo "I will get executed when I am cancelled"
