--- a/.github/workflows/10-execution-flow.yaml
+++ b/.github/workflows/10-execution-flow.yaml
@@ -7,10 +7,10 @@ on:
                 type: boolean
                 description: Whether unit tests will pass or not
                 default: true
-
 jobs:
     lint-build:
         runs-on: ubuntu-latest
+        continue-on-error: true
         steps:
             - name: Lint and build
               run: echo "Linting and building project"
