--- a/.github/workflows/11-inputs.yaml
+++ b/.github/workflows/11-inputs.yaml
@@ -27,6 +27,8 @@ jobs:
     deploy:
         runs-on: ubuntu-latest
         if: ${{ !inputs.dry-run }}
+        environment: ${{ inputs.target }}
+        needs: build 
         steps:
             - name: Deploy
               run: echo "Deploying to ${{ inputs.target }}"
