--- a/.github/workflows/12-output.yaml
+++ b/.github/workflows/12-output.yaml
@@ -18,8 +18,8 @@ jobs:
       - name: Print GitHub output
         run: echo "$GITHUB_OUPUT"
       - name: Build
-        id: build 
-        run: echo "status=${{ inputs.build-status }}" >> "$GITHUB_OUPUT""
+        id: build
+        run: echo "status=${{ inputs.build-status }}" >> "$GITHUB_OUPUT"
   deploy:
     runs-on: ubuntu-latest
     needs: build
