--- a/.github/workflows/07-expressions.yaml
+++ b/.github/workflows/07-expressions.yaml
@@ -2,7 +2,7 @@ name: 07 - Using expressions
 run-name: 07 - Using expressions | DEBUG - ${{ inputs.debug && 'ON' || 'OFF' }}
 
 on: 
-    push:
+    # push:
     workflow_dispatch: 
         inputs:
             debug:
