(feat12) output mistakes

--- a/.github/workflows/12-output.yaml
+++ b/.github/workflows/12-output.yaml
@@ -14,12 +14,20 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       build-status: ${{ steps.build.outputs.status }}
+      output1: ${{ steps.build.outputs.output1 }}
     steps:
       - name: Print GitHub output
         run: echo "$GITHUB_OUTPUT"
-      - name: Build
+      - name: Build 
         id: build
-        run: echo "status=${{ inputs.build-status }}" >> "$GITHUB_OUTPUT"
+        run: |
+          echo "$GITHUB_OUTPUT"
+          echo "status=${{ inputs.build-status }}" >> "$GITHUB_OUTPUT"
+          echo "output1=value1" >> "$GITHUB_OUTPUT"
+          echo "output2=value2" >> "$GITHUB_OUTPUT"
+          cat "$GITHUB_OUTPUT"
+          echo "mistake=true" > "$GITHUB_OUTPUT"
+          cat "$GITHUB_OUTPUT"
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -27,3 +35,5 @@ jobs:
     steps: 
       - name: Deploy 
         run: echo "Deployin.."
+      - name: Print Outputs 
+        run: echo ${{ needs.build.outputs.output1 }}
