--- a/.github/workflows/12-output-b.yaml
+++ b/.github/workflows/12-output-b.yaml
@@ -18,7 +18,7 @@ jobs:
         run: echo "$GITHUB_OUTPUT"
       - name: Build
         id: build
-        run: echo "status=${{ inputs.build-status }}"
+        run: echo "status=${{ inputs.build-status }}" >> "$GITHUB_OUTPUT""
   deploy:
     runs-on: ubuntu-latest
     needs: build
