--- a/.github/workflows/14-artifacts.yaml
+++ b/.github/workflows/14-artifacts.yaml
@@ -1,44 +1,58 @@
 name: 14 - Working with Artifacts
+
 on:
   workflow_dispatch:
+
+
 jobs:
-    test-build:
-      runs-on: ubuntu-latest 
-      defaults:
-        run:
-          working-directory: 14-artifacts/react-app
-      steps:
-        - name: Checkout code 
-          uses: actions/checkout@v4
-        - name: Setup Node 
-          uses: actions/setups-node@v3 
-          with: 
-            node-version: '20.x'
-        - name: Download cached dependencies 
-          uses: actions/cache@v3
-          id: cache 
-          with:
-            path: 14-artifacts/react-app/node_modules
-            key: deps-node-modules-{{ hashFiles('14-artifacts/react-app/package-locks.json') }}
-        - name: Install dependencies 
-          if: steps.cache.output.cache-hit != 'true'
-          run: npm ci 
-        - name: Unit Test
-          run: npm run test
-        - name: Build code
-          run: npm run build 
-        - name: Upload build files 
-          uses: actions/upload-artifacts@v3 
-          with: 
-            name: app 
-            path: 14-artifacts/react-app/build
-    deploy:
-      runs-on: ubuntu-latest
-      steps:  
-        - name: Download Artifacts 
-          uses: actions/download-artifacts@v3 
-          with: 
-            name: app 
-            path: build 
-        - name: Show folder structure 
-          run: ls -R 
+  test-build:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: 14-artifacts/react-app
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Setup Node
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+
+    - name: Cache node modules
+      uses: actions/cache@v4
+      id: cache
+      with:
+        path: 14-artifacts/react-app/node_modules
+        key: deps-node-modules-${{ hashFiles('14-artifacts/react-app/package-lock.json') }}
+
+    - name: Install dependencies
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: npm ci
+
+    - name: Unit Test
+      run: npm test -- --watch=false
+
+    - name: Build code
+      run: npm run build
+
+    - name: Upload build files
+      uses: actions/upload-artifact@v4
+      with:
+        name: app
+        path: 14-artifacts/react-app/build
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test-build
+
+    steps:
+    - name: Download Artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: app
+        path: build
+
+    - name: Show folder structure
+      run: ls -R
